--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "applch",
-  "version": "0.0.7-alpha",
+  "version": "0.0.8-alpha",
   "description": "An AI application checker in alpha (dont use), Only works with bun right now",
   "type": "module",
   "bin": {
@@ -18,6 +18,7 @@
     "checker",
     "bun"
   ],
+  "repository": "github:just-maik/applch",
   "author": "Maik",
   "engines": {
     "bun": ">=1.3.0"
